syntax = "proto3";

option go_package = "./grpc/user";

message GrpcGetUserReq {
  string userId = 1;
}

message GrpcGetUserResp {
  string userId = 1;
  string name = 2;
  int32 age = 3;
}

service GrpcUserService {
  rpc GrpcGetUser(GrpcGetUserReq) returns (GrpcGetUserResp);
}


// goctl rpc protoc user.proto --go_out=../ --go-grpc_out=../ --zrpc_out=../
